# meso-forge-mirror

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  REGEX_EXAMPLES.md  azure-debug-config.json  pixi.toml
.cargo/: config.toml
.github/workflows/: ci.yml  conda-package.yml
conda-recipe/: conda_build_config.yaml  meta.yaml  recipe.yaml
docs/: changelog-rattler-integration.adoc  index.adoc  nushell-migration-guide.md  nushell-scripts-guide.adoc  operator-guide.adoc  pixi-tasks-guide.adoc  pixi-tasks-guide.md  rattler-integration-summary.adoc
docs/chapters/: README.md  azure-devops-integration.adoc  github-integration.adoc
examples/: azure-config.json  azure-usage-examples.sh  config-minio.json  config-with-github.json  config.json  github-config.json  github-usage-examples.sh  test_platform_detection.rs  usage.nu  usage.sh
local-conda-cache/: channeldata.json  index.html
local-conda-cache/noarch/: current_repodata.json  current_repodata.json.bz2  index.html  repodata.json  repodata_from_packages.json  repodata_from_packages.json.bz2
local-conda-cache/noarch/.cache/: stat.json
local-conda-cache/noarch/.cache/about/: coreos-installer-0.25.0-he48fb7a_0.conda.json  zlib-1.2.13-hd590300_5.conda.json
local-conda-cache/noarch/.cache/index/: coreos-installer-0.25.0-he48fb7a_0.conda.json  zlib-1.2.13-hd590300_5.conda.json
local-conda-cache/noarch/.cache/paths/: coreos-installer-0.25.0-he48fb7a_0.conda.json  zlib-1.2.13-hd590300_5.conda.json
local-conda-cache/noarch/.cache/post_install/: coreos-installer-0.25.0-he48fb7a_0.conda.json  zlib-1.2.13-hd590300_5.conda.json
local-conda-cache/noarch/.cache/recipe/: zlib-1.2.13-hd590300_5.conda.json
local-conda-cache/noarch/.cache/run_exports/: zlib-1.2.13-hd590300_5.conda.json
scripts/: build.nu  build.sh  capture-azure-artifacts.sh  conda-ops.nu  linux-activation.sh  setup-env.bat  setup-env.nu  setup-env.sh  test.nu  trial.sh
src/: azure.rs  conda_package.rs  config.rs  github.rs  lib.rs  main.rs  mirror.rs  repository.rs
test-explicit/noarch/: repodata.json
test-local/noarch/: repodata.json
test-new-cli/noarch/: repodata.json  wheel-0.42.0-pyhd8ed1ab_0.conda
tests/: azure_tests.rs  cache_integration_tests.rs  github_tests.rs  zip_extraction_test.rs
