[package]
name = "meso-forge-mirror"
version = "0.1.0"
edition = "2021"
authors = ["phreed <211644+phreed@users.noreply.github.com>"]
description = "A tool for mirroring conda packages from staging PRs to target repositories"
repository = "https://github.com/babeloff/meso-forge-mirror"
license = "GPL-3.0"
readme = "README.md"
keywords = ["conda", "mirror", "package", "repository", "s3"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
futures = "0.3"
bytes = "1.7"
aws-sdk-s3 = "1.50"
aws-config = "1.5"

# Rattler crates for conda ecosystem integration
rattler_conda_types = "0.27"
rattler_package_streaming = "0.22"
rattler_virtual_packages = "0.19"
sha2 = "0.10"
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
